# Test-inline-static

./: CMakeLists.txt  README.md  core_registry.cpp  core_registry.hpp  main.cpp  output.md  plugin_a.cpp  plugin_b.cpp  refl_action.hpp  shared_target.hpp
